tests/neg/i1212.scala
@ann class ann extends scala.annotation.Annotation // error: An annotation class cannot be annotated with iself
